--- a/build.config
+++ b/build.config
@@ -272,3 +272,16 @@ CONFIG_FIRMWARE_INCLUDE_IPERF3=y
 
 ### Reduce trx image size
 #CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+
+############################################################
+### Connection settings SSH PROMETHEUS
+############################################################
+### IP
+IPWRT=192.168.1.1
+### Login
+ROOTWRT=admin
+### Password
+PWDR="admin"
+### SSH Port
+ssh_port="22"
+############################################################
